fixed succes modal width on mobile

--- a/Crowdfunding-Product-Page-Main/SCSS/_main.scss
+++ b/Crowdfunding-Product-Page-Main/SCSS/_main.scss
@@ -641,4 +641,14 @@ section {
       width: 100%;
     }
   }
+
+  /* Success Modal Section*/
+  .success-modal-container {
+    padding: 1.5rem;
+  }
+
+  .success-modal {
+    width: 100%;
+    padding: 2rem;
+  }
 }
